plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

group = 'com.scholario'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	group = rootProject.group
	version = rootProject.version

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(25)
		}
	}

	tasks.withType(JavaCompile) {
		options.compilerArgs += '-parameters'
	}

	repositories {
		mavenCentral()
	}

	dependencyManagement {
		imports {
			mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.6"
		}
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-validation'
		testImplementation 'org.junit.jupiter:junit-jupiter'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	}

	test {
		useJUnitPlatform()
	}
}
